k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app.kubernetes.io/name: web
  ports:
    - port: 80
      targetPort: 3000
